--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "ESNext",
-    "target": "ES6",
+    "target": "es2021",
     "jsx": "react-jsx",
     "allowImportingTsExtensions": true,
     "moduleResolution": "node",
